<resources>
    <string name="app_name">workoutlog</string>
    <string name="enter_email">enter email</string>
    <string name="SignUp">dont\have an account? <u> sighn up </u></string>
    <string name="enter_password">enter password</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="log_in">Already have an account?Log In</string>
    <string name="second_name">Second Name</string>
    <string name="first_name">first name</string>
    <string name="track">Track</string>
    <string name="plan">plan</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>